codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_dictation_disabled.snap
---
source: tui/src/keymap_setup.rs
assertion_line: 951
expression: disabled_snapshot
---

  Keymap
  Composer submission, queue, and dictation shortcuts.
  5 actions.

   All   Common   Customized (0)   Unbound (5)   App   Composer   Editor   Vim   Navigation   Agents   Approval      ›

  Type to search shortcuts

› Composer       Submit                   enter
  Composer       Queue                    tab
  Composer       Toggle Shortcuts         ?, shift-?
  Composer       History Search Previous  ctrl-r
  Composer       History Search Next      ctrl-s




















  left/right group · enter edit shortcut · * custom · - unbound · esc close
